--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.18.6",
-    "@babel/present-env": "7.18.6",
+    "@babel/preset-env": "7.18.6",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "10.2.4",
     "eslint": "8.19.0",
