--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^10.2.4",
+    "dayjs": "1.11.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
